--- a/1-9.css
+++ b/1-9.css
@@ -1,6 +1,55 @@
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-  }
-  
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+.clearfix::after {
+  content: "";
+  display: block;
+  clear: both;
+}
+main {
+  width: 960px;
+  margin: 50px auto;
+}
+.box {
+  width: 300px;
+  padding: 10px;
+  margin-right: 30px;
+  border: 1px solid #eeeeee;
+  float: left;
+  position: relative;
+}
+.box:last-child {
+  margin-right: 0;
+}
+.box-img1 {
+  height: 150px;
+  background-image: url(img/flow01.png);
+  background-size: cover;
+  background-position: bottom;
+}
+.box-img2 {
+  height: 150px;
+  background-image: url(img/flow02.png);
+  background-size: cover;
+  background-position: bottom;
+}
+.box-img3 {
+  height: 150px;
+  background-image: url(img/flow03.png);
+  background-size: cover;
+  background-position: bottom;
+}
+.step {
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-color: orange;
+  color: white;
+  padding: 3px;
+}
+.title {
+  margin: 10px;
+}
